# discharged

./: .rustfmt.toml  Cargo.toml  NOTICE  README.md  ROADMAP.md  example.html  watch.sh
.github/workflows/: checks.yml
scripts/: depsize.js  filesize.js
scripts/assets/: README.md
src/: lib.rs  main.rs
src/database/: mod.rs  users.rs
src/http/: mod.rs
src/http/routes/: mod.rs  root.rs  sessions.rs
src/types/: database.rs  mod.rs  ws.rs
src/util/: errors.rs  mod.rs
src/ws/: client.rs  errors.rs  mod.rs  schemas.rs
