[package]
name = "discharged"
version = "0.1.0"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "*"
serde_json = "*"
futures-util = "*"
lazy_static = "*"
rocket = "0.5.0-rc.1"

[dependencies.mongodb]
version = "2.0.0-beta.3"
default-features = false
features = ['sync']

[dependencies.tokio]
version = "*"
features = ["net"]

[dependencies.serde]
version = "*"
features = ["derive"]
