[package]
name = "discharged"
version = "0.0.1"
edition = "2018"
publish = false

[profile.release]
lto = 'fat'
debug = false
opt-level = 3
panic = 'abort'
codegen-units = 1
overflow-checks = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "0.15"
serde_json = "1.0"
futures-util = "0.3"
lazy_static = "1.4"
colorful = "0.2"

[dependencies.rand]
version = "*"
default-features = false

[dependencies.rocket]
version = "0.5.0-rc.1"
default-features = false
features = ["json"]

[dependencies.mongodb]
version = "2.2"
default-features = false
features = ['sync']

[dependencies.tokio]
version = "1.11"
features = ["net"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.ctrlc]
version = "3.0"
features = ["termination"]
